dev: scrollbar style added

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,16 @@
 	body {
 		@apply bg-white text-gray-900 cursor-default font-poppins;
 	}
+
+	::-webkit-scrollbar {
+		@apply w-2 h-2;
+	}
+
+	::-webkit-scrollbar-track {
+		@apply bg-transparent;
+	}
+
+	::-webkit-scrollbar-thumb {
+		@apply bg-primary rounded-md;
+	}
 }
